Refactor of GroupController and fixing those in tests